refactor: ApiResult 팩토리 메서드 전환, DTO record 변환, getter 호출 정리
- ApiResult를 Builder 패턴에서 success() 정적 팩토리 메서드로 전환
- 불필요한 @PathVariable 이름 선언 제거
- ApiResult 데드코드 제거 (@Builder, @Data 등 Lombok 애노테이션 및 미사용 오버로드)
- 전체 DTO 클래스를 Java record로 변환 (Lombok 제거, from() 팩토리 메서드 생성자 문법 적용)
- record 변환에 따른 getter 호출을 accessor 메서드로 일괄 정리 (getXxx() → xxx())
- 불변 record에 setter 대체를 위한 withXxx() wither 메서드 추가
- MemberDetailResult, MemberInTeamResult 패키지를 repository/dto로 이동

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>